# AutoUnzip

./: .gitignore  README.md  Taskfile.yml  extraction_errors_20250603_005222.json  jxl_results.csv  pyproject.toml  test_config.json  test_extractor.py
scripts/: README.md  compare_ugrep_rg.ps1  compare_ugrep_rg.py  ugrep_fullpath.ps1  ugrep_options_demo.py
scripts/demo_data/: file1.txt  space file.txt
scripts/demo_data/sub/: note.md
src/: auto_unzip.py
src/autounzip/: __main__.py  archive_analyzer.py  batch_processor.py  config_manager.py  zip_extractor.py
src/autounzip/analyzers/: __init__.py  archive_info.py  base_analyzer.py  file_type_detector.py  filter_manager.py
src/autounzip/core/: Taskfile.yml  archive_analyzer.py  batch_processor.py  cli.py  config_manager.py  zip_extractor.py
src/autounzip/doc/: FLATTEN_FEATURE.md
src/autounzip/old/: autounzip.py
src/autounzip/test/: test_import.py
src/bandia/: README.md  __init__.py  main.py
src/encodeb/: __main__..py  __main__.py  core.py  presets.toml
src/findz/: EXAMPLES.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  __init__.py  __main__.py  api.py  benchmark.py  cli.py  create_test_nested.py  find_nested.py  pyproject.toml  test_example.py  test_like.py  test_parse.py  test_suite.py  使用指南.md  使用指南_完整版.md  完成报告.md
src/findz/doc/: NEW_FEATURES.md
src/findz/filter/: __init__.py  filter.py  json_filter.py  lang.py  size.py  unified.py  value.py
src/findz/find/: __init__.py  cache.py  find.py  index.py  index_cache.py  walk.py
src/findz/tests/: __init__.py  test_api.py  test_cache.py  test_cli_refine.py  test_findz.py  test_index.py  test_performance.py  test_walk.py
src/grepu/: __init__.py  cli.py  config.py  core.py  matcher.py  model.py  output.py  runner.py
src/grepz/: __init__.py  cli.py  encoding.py  output.py
src/grepz/archive/: zip_reader.py
