[project]
name = "findz"
version = "0.1.0"
description = "A Python port of zfind - search for files with SQL-like WHERE syntax"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "findz contributors" }
]
keywords = ["file", "search", "find", "filter", "archive", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "pyparsing>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
full = [
    "py7zr>=0.20.0",
    "rarfile>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/findz"
Repository = "https://github.com/yourusername/findz"
"Bug Tracker" = "https://github.com/yourusername/findz/issues"

[project.scripts]
findz = "findz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/findz"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
